--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,9 +1,16 @@
+.navbar-navbar-default {
+    position: absolute;
+    background-color: blue;
+}
+
 .footer {
     position: fixed;
     left: 0;
+    right: 0;
     bottom: 0;
+    padding: 1rem;
     width: 100%;
-    background-color: red;
+    background-color: powderblue;
     color: white;
     text-align: center;
  }
