--- a/docs/styles.css
+++ b/docs/styles.css
@@ -15,7 +15,7 @@
 }
 
 .footer-distributed .footer-left p {
-    color: #8f9296;
+    color: #ffffff;
     font-size: 14px;
     margin: 0;
 }
@@ -54,6 +54,7 @@
 
 .footer-distributed .footer-right {
     float: right;
+    
     margin-top: 6px;
     max-width: 180px;
 }
